# FarmModel

./: README.md
doc/: 设计模式_说明文档_1652745_尹刘轩.docx
src/main/: testClassA.h  testClassB.h
src/main/FarmMaster/: Singleton.h
src/main/alarm/: Alarm.h  Alarm_MementoCommand.h
src/main/animals/: AbstractAnimal.h  Cow.h  Operation.h  Sheep.h
src/main/building/: building.h
src/main/iteartor/: Iterator.h
src/main/iterator/: Iterator.h
src/main/plants/: AbstractPlant.h  Cotton.h  PlantActionStrategy.h  PlantsField.h  PlantsPrototype.h  Prototype.h  Wheat.h
src/main/product/: ProductFramework.h  market.h  productFactory.h  trademark.h
src/main/visitor/: ConcreteVisitor.h  Visitor.h
src/product/: MakeFood.cpp  ProductFramework.h
src/test/: CMakeLists.txt  Unified_Testing_Procedure.cpp  testBuilding.cpp  testProduct.cpp  test_A.cpp  test_Alarm.cpp  test_B.cpp  test_MasterSingleton.cpp  test_Plant.cpp  test_PlantsPrototype.cpp  test_animal.cpp
